--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Gerenciando el Proceso de Innovación
+title: Anemia
 ---
 <div class="blurb">
   <h1 align="center"> </h1>
